Fixed minor issue in Web config.